# -esp32c3-oled-animator

./: .gitignore  Cargo.toml  README.md  generate_frames.py
firmware/: Cargo.toml
firmware/src/: main.rs
video_to_anim/: Cargo.toml
video_to_anim/src/: main.rs
video_to_anim/view_anim/: Cargo.toml
video_to_anim/view_anim/src/: main.rs
